search bar effect realization section

--- a/html/jd-home.html
+++ b/html/jd-home.html
@@ -304,12 +304,13 @@
 		</a>
 	</div>
 </div>
-<div class="sele-w">
+<div id="select">
 	<div id="logo-jd">
-		<a href="//www.jd.com" class="logo"></a>
+		<a href="http://www.jd.com" class="logo"></a>
 	</div>
 	<div id="search">
-		<ul id="sheple" class="hide"></ul>
+		<ul id="sheple" class="hide">			
+		</ul>
 		<form class="form">
 			<div class="search-input">
 				<input type="text" name="" style="color:rgb(153,153,153)" placeholder="口袋投影">
@@ -317,10 +318,33 @@
 			<button type="submit" class="search-btn">搜索</button>				
 		</form>
 	</div>
-	<div class="shop-cart"></div>
-	<div class="hotwords"></div>	
+	<div id="cart">		
+		<div class="shop-cart">
+			<i class="cart-logo"></i>
+			<i class="shop-num" id="shopping-amount">0</i>				
+			<i class="cart-link"><a href="javascript:void(0);" target="_blank">我的购物车</a></i>
+			<i class="cart-right">></i>
+		</div>
+		<div class="cart-spacer"></div>
+		<div class="cart-content"><span>购物车中还没有商品，赶紧选购吧！</span></div>
+	</div>
+	<div class="hotwords">
+		<ul>
+			<li class="hot-item"><a href="javascript:void(0);">99抵3万</a></li>
+			<li class="hot-item"><a href="javascript:void(0);">领免息券</a></li>
+			<li class="hot-item"><a href="javascript:void(0);">399减100</a></li>
+			<li class="hot-item"><a href="javascript:void(0);">5折秒杀</a></li>
+			<li class="hot-item"><a href="javascript:void(0);">雅培狂欢</a></li>
+			<li class="hot-item"><a href="javascript:void(0);">卫衣</a></li>
+			<li class="hot-item"><a href="javascript:void(0);">一体机电脑</a></li>
+			<li class="hot-item"><a href="javascript:void(0);">新品首发</a></li>
+			<li class="hot-item"><a href="javascript:void(0);">童装女</a></li>
+		</ul>
+	</div>	
 </div>
-<div id="main"></div>
+<div id="main">
+	<div class=""></div>
+</div>
 <div id="footer"></div>
 
 
