shop sort module

--- a/html/jd-home.html
+++ b/html/jd-home.html
@@ -304,7 +304,7 @@
 		</a>
 	</div>
 </div>
-<div id="select">
+<div id="select" class="w">
 	<div id="logo-jd">
 		<a href="http://www.jd.com" class="logo"></a>
 	</div>
@@ -342,8 +342,388 @@
 		</ul>
 	</div>	
 </div>
-<div id="main">
-	<div class=""></div>
+<div id="shop-nav">
+	<div id="main-nav">
+		<div class="w">
+			<div class="shop-sort">
+				<div class="all-shop-sort">
+					<div class="dt">
+						<a href="https://www.jd.com/allSort.aspx" target="_blank">全部商品分类</a>
+					</div>
+				</div>
+				<div class="dd">
+					<ul>
+						<li class="basic-shop-item">
+							<a href="javascript:void(0);" class="shop-link" target="_blank">家用电器</a>
+							<div class="shop-show">
+								<div class="overview">
+									<a href="javascript:void(0);" class="overview-link">家电城&nbsp;&nbsp;></a>
+									<a href="javascript:void(0);" class="overview-link">品牌日&nbsp;&nbsp;></a>
+									<a href="javascript:void(0);" class="overview-link">智能生活馆&nbsp;&nbsp;></a>
+									<a href="javascript:void(0);" class="overview-link">京东净化馆&nbsp;&nbsp;></a>
+									<a href="javascript:void(0);" class="overview-link">京东帮服务店&nbsp;&nbsp;></a>
+									<a href="javascript:void(0);" class="overview-link">京东众筹馆&nbsp;&nbsp;></a>
+								</div>
+								<dl class="shop-dl">
+									<dt><a href="javascript:void(0);">标题1&nbsp;&nbsp;&nbsp;></a></dt>
+									<dd>
+										<a href="#">内容1</a><span></span>
+	                                    <a href="#">内容2</a><span></span>
+	                                    <a href="#">内容3</a><span></span>
+	                                    <a href="#">内容4</a><span></span>
+	                                    <a href="#">内容5</a><span></span>
+	                                    <a href="#">内容6</a><span></span>
+	                                    <a href="#">内容7</a><span></span>
+	                                    <a href="#">内容8</a>
+									</dd>
+								</dl>
+							</div>
+						</li>
+						<li class="basic-shop-item">
+							<a href="javascript:void(0);" class="shop-link" target="_blank">手机</a>
+							<span class="divid-line">/</span>
+							<a href="javascript:void(0);" class="shop-link" target="_blank">运营商</a>
+							<span class="divid-line">/</span>
+							<a href="javascript:void(0);" class="shop-link" target="_blank">数码</a>
+							<div class="shop-show">
+								<div class="overview">
+									<a href="javascript:void(0);" class="overview-link">20天价保&nbsp;&nbsp;></a>
+									<a href="javascript:void(0);" class="overview-link">玩3C&nbsp;&nbsp;></a>
+									<a href="javascript:void(0);" class="overview-link">手机频道&nbsp;&nbsp;></a>
+									<a href="javascript:void(0);" class="overview-link">网上营业厅&nbsp;&nbsp;></a>
+									<a href="javascript:void(0);" class="overview-link">配件城&nbsp;&nbsp;></a>
+									<a href="javascript:void(0);" class="overview-link">影像Club&nbsp;&nbsp;></a>
+									<a href="javascript:void(0);" class="overview-link">以旧换新&nbsp;&nbsp;></a>
+								</div>
+								<dl class="shop-dl">
+									<dt><a href="javascript:void(0);">标题2&nbsp;&nbsp;&nbsp;></a></dt>
+									<dd>
+										<a href="#">内容1</a><span></span>
+	                                    <a href="#">内容2</a><span></span>
+	                                    <a href="#">内容3</a><span></span>
+	                                    <a href="#">内容4</a><span></span>
+	                                    <a href="#">内容5</a><span></span>
+	                                    <a href="#">内容6</a><span></span>
+	                                    <a href="#">内容7</a><span></span>
+	                                    <a href="#">内容8</a>
+									</dd>
+								</dl>
+							</div>
+						</li>
+						<li class="basic-shop-item">
+							<a href="javascript:void(0);" class="shop-link" target="_blank">电脑、办公</a>
+							<div class="shop-show">
+								<div class="overview">
+									<a href="javascript:void(0);" class="overview-link">玩3C&nbsp;&nbsp;></a>
+									<a href="javascript:void(0);" class="overview-link">本周热卖&nbsp;&nbsp;></a>
+									<a href="javascript:void(0);" class="overview-link">游戏部落&nbsp;&nbsp;></a>
+									<a href="javascript:void(0);" class="overview-link">GAME+&nbsp;&nbsp;></a>
+									<a href="javascript:void(0);" class="overview-link">装机大师&nbsp;&nbsp;></a>
+									<a href="javascript:void(0);" class="overview-link">办公生活馆&nbsp;&nbsp;></a>							
+								</div>
+								<dl class="shop-dl">
+									<dt><a href="javascript:void(0);">标题3&nbsp;&nbsp;&nbsp;></a></dt>
+									<dd>
+										<a href="#">内容1</a><span></span>
+	                                    <a href="#">内容2</a><span></span>
+	                                    <a href="#">内容3</a><span></span>
+	                                    <a href="#">内容4</a><span></span>
+	                                    <a href="#">内容5</a><span></span>
+	                                    <a href="#">内容6</a><span></span>
+	                                    <a href="#">内容7</a><span></span>
+	                                    <a href="#">内容8</a>
+									</dd>
+								</dl>
+							</div>
+						</li>
+						<li class="basic-shop-item">
+							<a href="javascript:void(0);" class="shop-link" target="_blank">家居</a>
+							<span class="divid-line">/</span>
+							<a href="javascript:void(0);" class="shop-link" target="_blank">家具</a>
+							<span class="divid-line">/</span>
+							<a href="javascript:void(0);" class="shop-link" target="_blank">家装</a>
+							<span class="divid-line">/</span>
+							<a href="javascript:void(0);" class="shop-link" target="_blank">厨具</a>
+							<div class="shop-show">
+								<dl class="shop-dl">
+									<dt><a href="javascript:void(0);">标题1&nbsp;&nbsp;&nbsp;</a></dt>
+									<dd>
+										<a href="#">内容1</a><span></span>
+	                                    <a href="#">内容2</a><span></span>
+	                                    <a href="#">内容3</a><span></span>
+	                                    <a href="#">内容4</a><span></span>
+	                                    <a href="#">内容5</a><span></span>
+	                                    <a href="#">内容6</a><span></span>
+	                                    <a href="#">内容7</a><span></span>
+	                                    <a href="#">内容8</a>
+									</dd>
+								</dl>
+							</div>
+						</li>
+						<li class="basic-shop-item">
+							<a href="javascript:void(0);" class="shop-link" target="_blank">男装</a>
+							<span class="divid-line">/</span>
+							<a href="javascript:void(0);" class="shop-link" target="_blank">女装</a>
+							<span class="divid-line">/</span>
+							<a href="javascript:void(0);" class="shop-link" target="_blank">童装</a>
+							<span class="divid-line">/</span>
+							<a href="javascript:void(0);" class="shop-link" target="_blank">内衣</a>
+							<div class="shop-show">
+								<dl class="shop-dl">
+									<dt><a href="javascript:void(0);">标题1&nbsp;&nbsp;&nbsp;</a></dt>
+									<dd>
+										<a href="#">内容1</a><span></span>
+	                                    <a href="#">内容2</a><span></span>
+	                                    <a href="#">内容3</a><span></span>
+	                                    <a href="#">内容4</a><span></span>
+	                                    <a href="#">内容5</a><span></span>
+	                                    <a href="#">内容6</a><span></span>
+	                                    <a href="#">内容7</a><span></span>
+	                                    <a href="#">内容8</a>
+									</dd>
+								</dl>
+							</div>
+						</li>
+						<li class="basic-shop-item">
+							<a href="javascript:void(0);" class="shop-link" target="_blank">个人护理</a>
+							<span class="divid-line">/</span>
+							<a href="javascript:void(0);" class="shop-link" target="_blank">清洁用品</a>
+							<span class="divid-line">/</span>
+							<a href="javascript:void(0);" class="shop-link" target="_blank">宠物</a>
+							<div class="shop-show">
+								<dl class="shop-dl">
+									<dt><a href="javascript:void(0);">标题1&nbsp;&nbsp;&nbsp;</a></dt>
+									<dd class="shop-dl">
+										<a href="#">内容1</a><span></span>
+	                                    <a href="#">内容2</a><span></span>
+	                                    <a href="#">内容3</a><span></span>
+	                                    <a href="#">内容4</a><span></span>
+	                                    <a href="#">内容5</a><span></span>
+	                                    <a href="#">内容6</a><span></span>
+	                                    <a href="#">内容7</a><span></span>
+	                                    <a href="#">内容8</a>
+									</dd>
+								</dl>
+							</div>
+						</li>
+						<li class="basic-shop-item">
+							<a href="javascript:void(0);" class="shop-link" target="_blank">鞋靴</a>
+							<span class="divid-line">/</span>
+							<a href="javascript:void(0);" class="shop-link" target="_blank">箱包</a>
+							<span class="divid-line">/</span>
+							<a href="javascript:void(0);" class="shop-link" target="_blank">珠宝</a>
+							<span class="divid-line">/</span>
+							<a href="javascript:void(0);" class="shop-link" target="_blank">奢侈品</a>
+							<div class="shop-show">
+								<dl class="shop-dl">
+									<dt><a href="javascript:void(0);">标题1&nbsp;&nbsp;&nbsp;</a></dt>
+									<dd>
+										<a href="#">内容1</a><span></span>
+	                                    <a href="#">内容2</a><span></span>
+	                                    <a href="#">内容3</a><span></span>
+	                                    <a href="#">内容4</a><span></span>
+	                                    <a href="#">内容5</a><span></span>
+	                                    <a href="#">内容6</a><span></span>
+	                                    <a href="#">内容7</a><span></span>
+	                                    <a href="#">内容8</a>
+									</dd>
+								</dl>
+							</div>
+						</li>
+						<li class="basic-shop-item">
+							<a href="javascript:void(0);" class="shop-link" target="_blank">运动</a>
+							<span class="divid-line">/</span>
+							<a href="javascript:void(0);" class="shop-link" target="_blank">户外</a>
+							<span class="divid-line">/</span>
+							<a href="javascript:void(0);" class="shop-link" target="_blank">钟表</a>
+							<div class="shop-show">
+								<dl class="shop-dl">
+									<dt><a href="javascript:void(0);">标题1&nbsp;&nbsp;&nbsp;</a></dt>
+									<dd>
+										<a href="#">内容1</a><span></span>
+	                                    <a href="#">内容2</a><span></span>
+	                                    <a href="#">内容3</a><span></span>
+	                                    <a href="#">内容4</a><span></span>
+	                                    <a href="#">内容5</a><span></span>
+	                                    <a href="#">内容6</a><span></span>
+	                                    <a href="#">内容7</a><span></span>
+	                                    <a href="#">内容8</a>
+									</dd>
+								</dl>
+							</div>
+						</li>
+						<li class="basic-shop-item">
+							<a href="javascript:void(0);" class="shop-link" target="_blank">汽车</a>
+							<span class="divid-line">/</span>
+							<a href="javascript:void(0);" class="shop-link" target="_blank">汽车用品</a>
+							<div class="shop-show">
+								<dl class="shop-dl">
+									<dt><a href="javascript:void(0);">标题1&nbsp;&nbsp;&nbsp;</a></dt>
+									<dd>
+										<a href="#">内容1</a><span></span>
+	                                    <a href="#">内容2</a><span></span>
+	                                    <a href="#">内容3</a><span></span>
+	                                    <a href="#">内容4</a><span></span>
+	                                    <a href="#">内容5</a><span></span>
+	                                    <a href="#">内容6</a><span></span>
+	                                    <a href="#">内容7</a><span></span>
+	                                    <a href="#">内容8</a>
+									</dd>
+								</dl>
+							</div>
+						</li>
+						<li class="basic-shop-item">
+							<a href="javascript:void(0);" class="shop-link" target="_blank">母婴</a>
+							<span class="divid-line">/</span>
+							<a href="javascript:void(0);" class="shop-link" target="_blank">玩具乐器</a>
+							<div class="shop-show">
+								<dl class="shop-dl">
+									<dt><a href="javascript:void(0);">标题1&nbsp;&nbsp;&nbsp;</a></dt>
+									<dd>
+										<a href="#">内容1</a><span></span>
+	                                    <a href="#">内容2</a><span></span>
+	                                    <a href="#">内容3</a><span></span>
+	                                    <a href="#">内容4</a><span></span>
+	                                    <a href="#">内容5</a><span></span>
+	                                    <a href="#">内容6</a><span></span>
+	                                    <a href="#">内容7</a><span></span>
+	                                    <a href="#">内容8</a>
+									</dd>
+								</dl>
+							</div>
+						</li>
+						<li class="basic-shop-item">
+							<a href="javascript:void(0);" class="shop-link" target="_blank">食品</a>
+							<span class="divid-line">/</span>
+							<a href="javascript:void(0);" class="shop-link" target="_blank">酒类</a>
+							<span class="divid-line">/</span>
+							<a href="javascript:void(0);" class="shop-link" target="_blank">生鲜</a>
+							<span class="divid-line">/</span>
+							<a href="javascript:void(0);" class="shop-link" target="_blank">特产</a>
+							<div class="shop-show">
+								<dl class="shop-dl">
+									<dt><a href="javascript:void(0);">标题1&nbsp;&nbsp;&nbsp;</a></dt>
+									<dd>
+										<a href="#">内容1</a><span></span>
+	                                    <a href="#">内容2</a><span></span>
+	                                    <a href="#">内容3</a><span></span>
+	                                    <a href="#">内容4</a><span></span>
+	                                    <a href="#">内容5</a><span></span>
+	                                    <a href="#">内容6</a><span></span>
+	                                    <a href="#">内容7</a><span></span>
+	                                    <a href="#">内容8</a>
+									</dd>
+								</dl>
+							</div>
+						</li>
+						<li class="basic-shop-item">
+							<a href="javascript:void(0);" class="shop-link" target="_blank">医疗保健</a>
+							<div class="shop-show">
+								<dl class="shop-dl">
+									<dt><a href="javascript:void(0);">标题1&nbsp;&nbsp;&nbsp;</a></dt>
+									<dd>
+										<a href="#">内容1</a><span></span>
+	                                    <a href="#">内容2</a><span></span>
+	                                    <a href="#">内容3</a><span></span>
+	                                    <a href="#">内容4</a><span></span>
+	                                    <a href="#">内容5</a><span></span>
+	                                    <a href="#">内容6</a><span></span>
+	                                    <a href="#">内容7</a><span></span>
+	                                    <a href="#">内容8</a>
+									</dd>
+								</dl>
+							</div>
+						</li>
+						<li class="basic-shop-item">
+							<a href="javascript:void(0);" class="shop-link" target="_blank">图书</a>
+							<span class="divid-line">/</span>
+							<a href="javascript:void(0);" class="shop-link" target="_blank">音像</a>
+							<span class="divid-line">/</span>
+							<a href="javascript:void(0);" class="shop-link" target="_blank">电子书</a>
+							<div class="shop-show">
+								<dl class="shop-dl">
+									<dt><a href="javascript:void(0);">标题1&nbsp;&nbsp;&nbsp;</a></dt>
+									<dd>
+										<a href="#">内容1</a><span></span>
+	                                    <a href="#">内容2</a><span></span>
+	                                    <a href="#">内容3</a><span></span>
+	                                    <a href="#">内容4</a><span></span>
+	                                    <a href="#">内容5</a><span></span>
+	                                    <a href="#">内容6</a><span></span>
+	                                    <a href="#">内容7</a><span></span>
+	                                    <a href="#">内容8</a>
+									</dd>
+								</dl>
+							</div>
+						</li>
+						<li class="basic-shop-item">
+							<a href="javascript:void(0);" class="shop-link" target="_blank">彩票</a>
+							<span class="divid-line">/</span>
+							<a href="javascript:void(0);" class="shop-link" target="_blank">旅行</a>
+							<span class="divid-line">/</span>
+							<a href="javascript:void(0);" class="shop-link" target="_blank">充值</a>
+							<span class="divid-line">/</span>
+							<a href="javascript:void(0);" class="shop-link" target="_blank">票务</a>
+							<div class="shop-show">
+								<dl class="shop-dl">
+									<dt><a href="javascript:void(0);">标题1&nbsp;&nbsp;&nbsp;</a></dt>
+									<dd>
+										<a href="#">内容1</a><span></span>
+	                                    <a href="#">内容2</a><span></span>
+	                                    <a href="#">内容3</a><span></span>
+	                                    <a href="#">内容4</a><span></span>
+	                                    <a href="#">内容5</a><span></span>
+	                                    <a href="#">内容6</a><span></span>
+	                                    <a href="#">内容7</a><span></span>
+	                                    <a href="#">内容8</a>
+									</dd>
+								</dl>
+							</div>
+						</li>
+						<li class="basic-shop-item">
+							<a href="javascript:void(0);" class="shop-link" target="_blank">理财</a>
+							<span class="divid-line">/</span>
+							<a href="javascript:void(0);" class="shop-link" target="_blank">众筹</a>
+							<span class="divid-line">/</span>
+							<a href="javascript:void(0);" class="shop-link" target="_blank">白条</a>
+							<span class="divid-line">/</span>
+							<a href="javascript:void(0);" class="shop-link" target="_blank">保险</a>
+							<div class="shop-show">
+								<dl class="shop-dl">
+									<dt><a href="javascript:void(0);">标题1&nbsp;&nbsp;&nbsp;</a></dt>
+									<dd>
+										<a href="#">内容1</a><span></span>
+	                                    <a href="#">内容2</a><span></span>
+	                                    <a href="#">内容3</a><span></span>
+	                                    <a href="#">内容4</a><span></span>
+	                                    <a href="#">内容5</a><span></span>
+	                                    <a href="#">内容6</a><span></span>
+	                                    <a href="#">内容7</a><span></span>
+	                                    <a href="#">内容8</a>
+									</dd>
+								</dl>
+							</div>
+						</li>
+					</ul>
+				</div>				
+			</div>
+			<div class="nav-ul">
+				<ul class="sort-ul">
+					<li class="sort-item"><a href="javascript:void(0);">服装城</a></li>
+					<li class="sort-item"><a href="javascript:void(0);">美容馆</a></li>
+					<li class="sort-item"><a href="javascript:void(0);">京东超市</a></li>
+					<li class="sort-item"><a href="javascript:void(0);">生鲜肉</a></li>
+					<li class="sort-item"><a href="javascript:void(0);">全球购</a></li>
+				</ul>				
+				<ul class="sort-ul">
+					<li class="sort-item"><a href="javascript:void(0);">闪购</a></li>
+					<li class="sort-item"><a href="javascript:void(0);">团购</a></li>
+					<li class="sort-item"><a href="javascript:void(0);">拍卖</a></li>
+					<li class="sort-item"><a href="javascript:void(0);">金融</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
 </div>
 <div id="footer"></div>
 
