picture slide moudel

--- a/html/jd-home.html
+++ b/html/jd-home.html
@@ -725,6 +725,21 @@
 		</div>
 	</div>
 </div>
+<div id="mid">
+	<div class="bet">
+		<div class="right-nav"></div>
+		<div class="pic">
+			<div class="pic-slide">
+				<ul class="carousel-images">					
+				</ul>
+				<span class="moveBtn rt">></span>
+				<span class="moveBtn lf"><</span>
+				<ul class="carousel-index"></ul>
+			</div>
+			<div class="pic-show"></div>
+		</div>
+	</div>
+</div>
 <div id="footer"></div>
 
 
