--- a/html/jd-home.html
+++ b/html/jd-home.html
@@ -727,7 +727,9 @@
 </div>
 <div id="mid">
 	<div class="bet">
-		<div class="right-nav"></div>
+		<div class="right-nav">
+			
+		</div>
 		<div class="pic">
 			<div class="pic-slide">
 				<ul class="carousel-images">					
@@ -736,11 +738,24 @@
 				<span class="moveBtn lf"><</span>
 				<ul class="carousel-index"></ul>
 			</div>
-			<div class="pic-show"></div>
+			<div class="pic-show">
+				<div class="show-pic">
+					<a href="javascript:void(0);">
+						<img src="../images/show1.jpg">
+					</a>
+				</div>
+				<div class="show-pic" id="show2">
+					<a href="javascript:void(0);">
+						<img src="../images/show2.jpg">
+					</a>
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
-<div id="footer"></div>
+<div id="footer">
+	<img src="../">
+</div>
 
 
 
